# json_to_pydantic

./: .bumpversion.toml  .gitignore  Cargo.toml  LICENSE  README.md  test.json
src/: main.rs  parse.rs
