[package]
name = "json_to_pydantic"
version = "0.1.2"
edition = "2021"
authors = ["Viktor Merkurev <mr.fennr@ya.ru>"]
description = "Json to Pydantic CLI converter"
repository = "https://github.com/fennr/json_to_pydantic"
keywords = ["json_to_pydantic", "cli"]
readme = "README.md"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
serde = "1.0.211"
serde_json = "1.0.132"
